<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/editName"
            android:hint="@string/hint_name"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:importantForAutofill="no"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageButton"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="8dp" android:id="@+id/editAmount"
            android:hint="@string/hint_amount"
            android:numeric="integer"
            android:inputType="number" app:layout_constraintStart_toEndOf="@+id/button_remove"
            android:layout_marginEnd="3dp" app:layout_constraintEnd_toStartOf="@+id/button_add"
            app:layout_constraintHorizontal_bias="0.0" android:textAlignment="center"
            android:text="0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/editName"
            android:importantForAutofill="no"/>
    <TextView
            android:text="@string/update_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" android:id="@+id/textView" android:textSize="24sp"/>
    <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_save" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorAccent" android:textColor="@android:color/background_light"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_cancel"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@android:color/background_light" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/button_save"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_save"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_add_black_24dp"
            android:id="@+id/button_add"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:elevation="0dp"
            android:backgroundTint="@android:color/transparent" android:tint="@color/colorAccent"
            app:layout_constraintTop_toTopOf="@+id/editAmount"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_remove_black_24dp"
            android:id="@+id/button_remove"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:backgroundTint="@android:color/transparent" android:tint="@color/colorAccent"
            app:layout_constraintTop_toTopOf="@+id/editAmount"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/amount_update" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editAmount"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:textAlignment="center" android:text="@string/hint_amount_changed"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_more_vert_black_24dp"
            app:layout_constraintTop_toTopOf="@+id/textView"
            android:id="@+id/imageButton"
            android:backgroundTint="@android:color/transparent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="@+id/textView"/>
</android.support.constraint.ConstraintLayout>